尝试容器化部署