@@ -1,4 +1,5 @@
 import org.springframework.boot.gradle.tasks.aot.ProcessAot
+import org.springframework.boot.gradle.tasks.bundling.BootBuildImage
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 
 plugins {
@@ -62,5 +63,14 @@ tasks.withType<ProcessAot> {
 
 tasks.named<BootJar>("bootJar") {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveBaseName.set("app.jar")
+    archiveFileName.set("app.jar")
+}
+
+tasks.named<BootBuildImage>("bootBuildImage") {
+    builder = "bellsoft/buildpacks.builder:musl"
+    environment.put("JAVA_TOOL_OPTIONS", "-XX:+UseZGC")
+    environment.put("BP_SPRING_AOT_ENABLED", "false")
+    environment.put("BP_NATIVE_IMAGE", "false")
+    environment.put("BP_JVM_CDS_ENABLED", "true")
+    environment.put("BP_JVM_VERSION", "21")
 }
